# webcam-cloud

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_EC2  Dockerfile_Endpoint  Dockerfile_Lambda  Dockerfile_inf  LICENSE  README.md  cloud_utils.py  main.py  makefile  pyproject.toml  requirements_endpoint.txt
aws_configs/: create_lambda_role.sh  s3-policy.json
dash_app/: app.py  dash_utils.py
dash_app/assets/: style.css
modules/: constants.py  endpoint.py  grabber.py  inference.py  lambda1.py  lambda2.py  start_ec2.py  stop_ec2.py  webcam_retirever.py  webcam_retriever.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  startup.sh.tpl  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: test_video_stream.py
utils/: aws_cloud.py  loggers.py  video_stream.py
